<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/principal_text"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        android:text="@string/mortgage_principal"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/principal_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/interest_text"
        android:layout_width="300dp"
        android:layout_height="33dp"
        android:layout_marginBottom="4dp"
        android:text="@string/select_your_interest_rate"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/interest_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/term_text"
        android:layout_width="311dp"
        android:layout_height="39dp"
        android:layout_marginBottom="4dp"
        android:text="@string/select_your_term"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/term_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/interest_spinner"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/term_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/term_spinner"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/principal_value"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/raw_number_value"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/interest_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:backgroundTint="#35b234"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_spinner"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/welcome_to_the_emi_calculator"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/intro_message"
        android:layout_width="275dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/enter_your_principal_and_select_the_interest_rate_and_term_of_loan_to_see_your_monthly_installments"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/principal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro"
        app:layout_constraintVertical_bias="0.52" />
</androidx.constraintlayout.widget.ConstraintLayout>